<resources>
    <string name="app_name">Shaft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="action_import">从剪切板导入</string>
    <string name="action_browser_login">自选浏览器进行登录</string>
    <string name="action_browser_signup">自选浏览器进行注册</string>
    <string name="browser_dialog_found_title">查找到了这些</string>
    <string name="action_qcode">扫描二维码</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="feature_empty_hint">还没有收藏过精华\n在作品列表页的菜单里选「收藏到精华」</string>
    <string name="empty_list_2">居然啥也没有</string>
    <string name="empty_list_3">居然啥也没有</string>
    <string name="empty_list_4">居然啥也没有</string>
    <string name="empty_list_5">居然啥也没有</string>
    <string name="empty_list_6">居然啥也没有</string>
    <string name="empty_list_7">居然啥也没有</string>
    <string name="empty_list_8">居然啥也没有</string>
    <string name="post_follow">关注</string>
    <string name="post_unfollow">取关</string>
    <string name="double_click_finish">再按一次退出~</string>
    <string name="delete_all">删除全部</string>
    <string name="illust_filter">筛选</string>
    <string name="share_illust">%1$s | %2$s #Pixiv %3$s</string>
    <string name="share">分享</string>
    <string name="webview_handler_open_in_browser">在浏览器中打开</string>
    <string name="webview_go_forward">前进</string>
    <string name="webview_handler_copy_link_addr">复制链接地址</string>
    <string name="webview_handler_copy_link_text">复制链接文本</string>
    <string name="webview_handler_download_link">下载链接</string>
    <string name="webview_handler_share">分享链接</string>
    <string name="webview_handler_open_image">打开图片</string>
    <string name="webview_handler_search_with_ggl">在 Google 中搜索此图片</string>
    <string name="copy_to_clipboard">已复制</string>
    <string name="now_login">登录（需要开代理）</string>
    <string name="has_no_account">没有账号?</string>
    <string name="go_to_login">我要登录</string>
    <string name="now_sign">注册（需要开代理）</string>
    <string name="website_users">users</string>
    <string name="website_illust">illusts</string>
    <string name="see_download_task">查看任务</string>
    <string name="the_others">其他</string>
    <string name="search_image_origin">以图搜源</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">全屏测试</string>
    <string name="pixiv_use_detail">服务条款</string>
    <string name="privacy">隐私政策</string>
    <string name="about_app">关于</string>
    <string name="pixiv_special">PixiVision特辑</string>
    <string name="pixiv_problem">常见问题</string>
    <string name="project_license">License</string>
    <string name="select_inner_storage">请选择本机内置存储</string>
    <string name="walkthrough">画廊</string>
    <string name="latest_work">最新</string>
    <string name="search">搜索</string>
    <string name="develop">开发者预览</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannot_download">你下你🐴呢？</string>
    <string name="image_alredy_exist">图片已存在</string>
    <string name="has_been_added">个项目已加入下载队列</string>
    <string name="type_illust">插画</string>
    <string name="type_manga">漫画</string>
    <string name="type_walk_through">画廊</string>
    <string name="type_novel">小说</string>
    <string name="type_live">直播</string>
    <string name="public_like_illust">公开收藏</string>
    <string name="private_like_illust">私人收藏</string>
    <string name="public_like_user">公开关注</string>
    <string name="private_like_user">私人关注</string>
    <string name="private_like_novel">私人收藏小说</string>
    <string name="public_like_novel">公开收藏小说</string>
    <string name="bookmark">收藏夹</string>
    <string name="filter_by_bookmark">按标签筛选</string>
    <string name="access_denied">请给与足够的权限</string>
    <string name="view_history">浏览记录</string>
    <string name="muted_history">屏蔽记录</string>
    <string name="app_settings">设置</string>
    <string name="full_about_app">关于软件</string>
    <string name="no_mail_address">未绑定邮箱</string>
    <string name="shaft_hint">Shaft 提示</string>
    <string name="you_have_download_plan">你还有未下载完成的任务，确定退出吗？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="comment_emoji_panel_close">关闭表情面板</string>
    <string name="now_downloading">正在下载</string>
    <string name="ugoira_encoding">压制中</string>
    <string name="has_download">已完成</string>
    <string name="has_copyed">已复制到剪贴板</string>
    <string name="no_info">暂无信息</string>
    <string name="like_success_public">关注成功~(公开的)</string>
    <string name="like_success_private">关注成功~(非公开的)</string>
    <string name="like_novel_success_public">收藏成功~(公开的)</string>
    <string name="like_novel_success_private">收藏成功~(非公开的)</string>
    <string name="cancel_like">取消关注~</string>
    <string name="cancel_like_illust">取消收藏</string>
    <string name="like_illust_success">收藏成功</string>
    <string name="how_about_trending">动态页面展示谁的作品？</string>
    <string name="recomment_user">推荐用户</string>
    <string name="you_mother_fucker_want_to_read_novel">啥？您还想看日语小说？？</string>
    <string name="user_info">详细信息</string>
    <string name="how_many_illust_works">%d件作品</string>
    <string name="user_main_page">个人主页</string>
    <string name="user_collections">收藏夹</string>
    <string name="download_manager">下载管理</string>
    <string name="recommend_illust">推荐作品</string>
    <string name="recommend_novel">推荐小说</string>
    <string name="recommend_manga">推荐漫画</string>
    <string name="v3_widget_spotlight_label">Pixiv 推荐 大图</string>
    <string name="v3_widget_spotlight_description">每隔一段时间为你挑一张推荐作品</string>
    <string name="v3_widget_loading_title">正在挑选作品…</string>
    <string name="v3_widget_loading_author">稍候片刻</string>
    <string name="v3_widget_login_required">登录后查看推荐</string>
    <string name="v3_widget_failed">暂时无法加载，稍后再试</string>
    <string name="v3_widget_daily_rank_label">Pixiv 日榜</string>
    <string name="v3_widget_daily_rank_description">Pixiv 日榜 · Top 3</string>
    <string name="v3_widget_recommend_strip_label">Pixiv 推荐 三张</string>
    <string name="v3_widget_recommend_strip_description">Pixiv 推荐 · 三张</string>
    <string name="v3_widget_recommend_card_label">Pixiv 推荐 随机卡片</string>
    <string name="v3_widget_recommend_card_description">随机一张推荐作品，可缩放为 2×2 / 2×1</string>
    <string name="v3_widget_refresh_interval_title">小组件换图间隔</string>
    <string name="v3_widget_interval_minutes">%d 分钟</string>
    <string name="v3_widget_interval_hours">%d 小时</string>
    <string name="v3_widget_bookmark_failed">收藏失败，请稍后再试</string>
    <string name="v3_widget_hide_bookmark_button">隐藏小组件收藏按钮</string>
    <string name="v3_widget_hide_bookmark_button_desc">按钮浮在封面上，隐藏后画面更完整</string>
    <string name="v3_widget_hide_refresh_button">隐藏小组件刷新按钮</string>
    <string name="v3_widget_hide_refresh_button_desc">隐藏后只按换图间隔自动换图</string>
    <string name="tablet_layout">平板适配排版</string>
    <string name="tablet_layout_desc">在平板等大屏设备上使用侧边导航栏、按屏幕宽度自动加列的瀑布流和左右排布的作品详情；关闭后与手机排版一致，仅平板生效</string>
    <string name="rail_bookmarks">收藏</string>
    <string name="rail_downloads">下载</string>
    <string name="rail_open_menu">打开菜单</string>
    <string name="novel_tag">小说标签</string>
    <string name="hot_tag">热门标签</string>
    <string name="ranking_illust">排行榜</string>
    <string name="see_more">查看更多</string>
    <string name="recommend_user">推荐用户</string>
    <string name="recommend">推荐</string>
    <string name="discover">发现</string>
    <string name="whats_new">动态</string>
    <string name="me_tab">我</string>
    <string name="me_greeting_format">Hi, %1$s</string>
    <string name="me_greeting_guest">Hi</string>
    <string name="me_subinfo_uid_format">ID: %1$d</string>
    <string name="me_section_quick">常用</string>
    <string name="account">账号</string>
    <string name="account_manage">账号管理</string>
    <string name="login_out">退出登录</string>
    <string name="normal">常规</string>
    <string name="open_direct_connection">开启直连(自行代理或在墙外，可以关闭)</string>
    <string name="see_pixiv_ez">详见 Notsfsssf/Pix-EzViewer</string>
    <string name="use_secure_dns_title">安全 DNS（DoH）</string>
    <string name="use_secure_dns_summary">通过 Cloudflare DoH 解析 Pixiv 域名；本地 DNS 已可信时可关闭</string>
    <string name="show_original_image">图片详情展示原图</string>
    <string name="delete_star_illust">动态过滤已收藏</string>
    <string name="filter_rank_bookmarked">排行榜过滤已收藏</string>
    <string name="save_view_history">保存浏览历史</string>
    <string name="single_download_task">保持一个任务在下载中(保证下载顺序)</string>
    <string name="double_stagger_data">动态页面双列瀑布流</string>
    <string name="show_like_button">列表页展示收藏按钮</string>
    <string name="slide_down_endless">相关作品无限下滑（可能出现重复）</string>
    <string name="other_settings">其他</string>
    <string name="search_result_filter">搜索结果收藏量筛选</string>
    <string name="search_popular_default">默认按热度排序搜索</string>
    <string name="add">添加</string>
    <string name="string_15">修改背景色</string>
    <string name="string_20">全部选择</string>
    <string name="string_21">取消全选</string>
    <string name="string_22">导出下载链接</string>
    <string name="string_82">保存本地（已下载中可查看）</string>
    <string name="string_141">删除</string>
    <string name="string_277">导出TXT（文件夹中可查看）</string>
    <string name="string_278">导出TXT并分享</string>
    <string name="string_316">全部收藏</string>
    <string name="string_317">全部取消收藏</string>
    <string name="string_326">开始</string>
    <string name="string_327">暂停</string>
    <string name="string_328">清空任务</string>
    <string name="string_r">R</string>
    <string name="string_403">选择已收藏</string>
    <string name="string_404">选择未下载</string>
    <string name="view_comments">查看评论</string>
    <string name="download_records_export">导出下载记录</string>
    <string name="download_records_import">导入下载记录</string>
    <string name="mute_records_export">导出屏蔽记录</string>
    <string name="mute_records_import">导入屏蔽记录</string>
    <string name="action_copy">复制</string>
    <string name="action_note">笔记</string>
    <string name="action_translate">翻译</string>
    <string name="action_search_pixiv">P站</string>
    <string name="action_search_web">网页</string>
    <string name="menu_copy_link">复制链接</string>
    <string name="desc_share">分享</string>
    <string name="action_quote_card">金句卡</string>
    <string name="action_highlight_menu">高亮 ▾</string>
    <string name="export_novel">导出</string>
    <string name="bulk_select_select_all">全选</string>
    <string name="history_multi_select">多选</string>
    <string name="dlmgr_active_action_pause_all">全部暂停</string>
    <string name="dlmgr_done_action_export">导出</string>
    <string name="dlmgr_import_title">导入本地下载</string>
    <string name="refresh_token_login_entry">使用 refresh token 登录</string>
    <string name="view_history_export">导出浏览记录</string>
    <string name="view_history_import">导入浏览记录</string>
    <string name="snapshot_import">导入快照</string>
    <string name="snapshot_batch_export">批量导出</string>
    <string name="snapshot_batch_delete">批量删除</string>
    <string name="snapshot_export">导出</string>
    <string name="snapshot_delete">删除</string>
    <string name="setting_predictive_back_desc">按页面选择是否使用系统预测返回动画；关掉的页面改用传统返回。部分系统返回动画异常（闪烁 / 底页异常 / 不明纯色边）时可逐页排查。</string>
    <string name="setting_predictive_back_dialog_hint">开启 = 使用系统预测返回动画；关闭改用传统返回。</string>
    <string name="setting_predictive_back_help">说明</string>
    <string name="setting_predictive_back_group_system">系统预测返回</string>
    <string name="setting_predictive_back_group_drawer">应用自绘</string>
    <string name="setting_predictive_back_group_experimental">实验</string>
</resources>