<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_reader_bar_top"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp"
        android:paddingVertical="6dp">

        <TextView
            android:id="@+id/sel_copy"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_copy" />

        <TextView
            android:id="@+id/sel_share"
            style="@style/ReaderSelectionAction"
            android:text="@string/desc_share" />

        <TextView
            android:id="@+id/sel_quote_card"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_quote_card" />

        <TextView
            android:id="@+id/sel_search_pixiv"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_search_pixiv" />

        <TextView
            android:id="@+id/sel_search_web"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_search_web" />

        <TextView
            android:id="@+id/sel_translate"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_translate" />

        <TextView
            android:id="@+id/sel_highlight"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_highlight_menu" />

        <TextView
            android:id="@+id/sel_note"
            style="@style/ReaderSelectionAction"
            android:text="@string/action_note" />

        <TextView
            android:id="@+id/sel_dismiss"
            style="@style/ReaderSelectionAction"
            android:text="✕" />

    </LinearLayout>

</HorizontalScrollView>
