<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_normal">
        <item
            android:id="@+id/action_batch_export"
            android:icon="@drawable/ic_v3_export_24"
            android:title="@string/snapshot_batch_export"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_batch_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/snapshot_batch_delete"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_import_snapshot"
            android:icon="@drawable/ic_baseline_get_app_24"
            android:title="@string/snapshot_import"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_selection"
        android:visible="false">
        <item
            android:id="@+id/action_cancel_selection"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/cancel"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_select_all_toggle"
            android:icon="@drawable/ic_select_all_24"
            android:title="@string/bulk_select_select_all"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_export_selected"
            android:icon="@drawable/ic_v3_export_24"
            android:title="@string/snapshot_export"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_delete_selected"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/snapshot_delete"
            app:showAsAction="always" />
    </group>
</menu>
