<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        android:title="@string/string_326"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stop"
        android:orderInCategory="100"
        android:title="@string/string_327"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/string_328"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_downloads"
        android:orderInCategory="200"
        android:title="@string/download_records_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_downloads"
        android:orderInCategory="201"
        android:title="@string/download_records_import"
        app:showAsAction="never" />
</menu>
