<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_color"
        android:orderInCategory="100"
        android:title="@string/string_15"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/string_82"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_txt"
        android:orderInCategory="100"
        android:title="@string/string_277"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_txt_and_share"
        android:orderInCategory="100"
        android:title="@string/string_278"
        app:showAsAction="never" />
</menu>
