<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="80"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export_mute"
        android:orderInCategory="200"
        android:title="@string/mute_records_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_mute"
        android:orderInCategory="201"
        android:title="@string/mute_records_import"
        app:showAsAction="never" />
</menu>
