<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_1"
        android:orderInCategory="100"
        android:title="@string/recommend"
        android:icon="@drawable/ic_gesture_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_2"
        android:orderInCategory="100"
        android:title="@string/discover"
        android:icon="@drawable/ic_discover"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_3"
        android:orderInCategory="100"
        android:title="@string/whats_new"
        android:icon="@drawable/ic_user_new_illust"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_4"
        android:orderInCategory="100"
        android:title="@string/string_r"
        android:icon="@drawable/ic_baseline_bubble_chart_24"
        app:showAsAction="always" />

</menu>
