<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/main_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="个人主页" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_collection"
            android:title="收藏夹" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="下载管理" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="浏览历史" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="设置" />
    </group>

    <item android:title="@string/the_others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/about_app" />
            <item
                android:id="@+id/nav_reverse"
                android:icon="@drawable/ic_collections_black_24dp"
                android:title="@string/search_image_origin" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_toys_black_24dp"
                android:title="@string/walkthrough" />

            <item
                android:id="@+id/nav_new_work"
                android:icon="@drawable/ic_fiber_new_black_24dp"
                android:title="@string/latest_work" />

            <item
                android:id="@+id/web_test"
                android:icon="@drawable/ic_loyalty_black_24dp"
                android:title="@string/hito" />
        </menu>
    </item>

</menu>
