<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingEnd="4dp">

        <ImageButton
            android:id="@+id/btn_comments"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/view_comments"
            android:padding="9dp"
            android:src="@drawable/ic_baseline_comment_24"
            app:tint="@color/text00" />

        <ImageButton
            android:id="@+id/btn_copy_link"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu_copy_link"
            android:padding="9dp"
            android:src="@drawable/ic_baseline_launch_24"
            app:tint="@color/text00" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_share"
            android:padding="9dp"
            android:src="@drawable/ic_share_black_24dp"
            app:tint="@color/text00" />

        <ImageButton
            android:id="@+id/btn_export"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/export_novel"
            android:padding="9dp"
            android:src="@drawable/ic_file_download_black_24dp"
            app:tint="@color/text00" />

    </LinearLayout>
</layout>
